- Added README - Added configuration - Added option to start I2P from desktopgui - Cleanup
Monotone-Parent: f6d70a97816de5edd032476a660dd985a191aaef
Monotone-Revision: a380d3d5133329aaa5b6d1a6a7fc047d6b0840e7

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2010-11-25T18:12:32

--- a/apps/desktopgui/build.xml
+++ b/apps/desktopgui/build.xml
@@ -43,7 +43,8 @@
 			</manifest>
 		</jar>
 	</target>
-	
+
+	<target name="dist" depends="jar" />	
 	<target name="all" depends="jar" />
 </project>
 
